# deduplicator

./: CHANGELOG.md  LICENSE  README.md  TODO.md  api.py  build-appimage.sh  build.md  build.py  build_.py  cli.py  commands.py  dialogs.py  duplicate_groups_list.py  generate_files.py  index.html  main_window.py  main_window_ui.py  onlyone-cli.spec  onlyone-gui.spec  preview.py  pyproject.toml  readme.md  requirenments  texts.py  translator.py  ui_updater.py  worker.py
.github/workflows/: build.yml
core/: __init__.py  deduplicator.py  grouper.py  hasher.py  interfaces.py  models.py  scanner.py  similar_image_finder.py  stages.py
custom_widgets/: duplicate_groups_list.py  favourite_dirs_dialog.py  image_preview_label.py
lang/: en.json  ru.json
src/deduplicator/: __init__.py  cli.py  commands.py
src/deduplicator/core/: __init__.py  deduplicator.py  grouper.py  hasher.py  interfaces.py  models.py  scanner.py  sorter.py  stages.py
src/deduplicator/gui/: __init__.py  launcher.py  main_window.py  main_window_ui.py  worker.py
src/deduplicator/gui/custom_widgets/: __init__.py  duplicate_groups_list.py  favourite_dirs_dialog.py  image_preview_label.py
src/deduplicator/services/: duplicate_service.py  file_service.py
src/deduplicator/utils/: convert_utils.py
src/highlander/: __init__.py  cli.py  commands.py
src/highlander/core/: __init__.py  deduplicator.py  grouper.py  hasher.py  interfaces.py  models.py  scanner.py  sorter.py  stages.py
src/highlander/gui/: __init__.py  launcher.py  main_window.py  main_window_ui.py  worker.py
src/highlander/gui/custom_widgets/: duplicate_groups_list.py  favourite_dirs_dialog.py  image_preview_label.py
src/highlander/services/: duplicate_service.py
src/highlander/utils/: convert_utils.py
src/onlyone/: __init__.py  aliases.py  cli.py  commands.py  logging_config.py  progress_bar.py  reporter.py
src/onlyone/core/: __init__.py  deduplicator.py  demasker.py  grouper.py  hasher.py  interfaces.py  measurer.py  models.py  normalizer.py  scanner.py  sorter.py  stages.py  validator.py
src/onlyone/gui/: keep_one_worker.py  launcher.py  main_window.py  main_window_ui.py  worker.py
src/onlyone/gui/custom_widgets/: __init__.py  deletion_confirm_dialog.py  duplicate_groups_list.py  excluded_dirs_dialog.py  favourite_dirs_dialog.py  image_preview_label.py
src/onlyone/services/: __init__.py  duplicate_service.py  file_service.py
src/onlyone/utils/: __init__.py  convert_utils.py
tests/: conftest.py  test_argument_parsing.py  test_cli.py  test_cli_excluded_dirs.py  test_commands.py  test_convert_utils.py  test_critical_edge_cases.py  test_deduplicator.py  test_demasker.py  test_duplicate_service.py  test_file_service.py  test_grouper.py  test_hasher.py  test_logging_config.py  test_measurer.py  test_normalizer.py  test_progress_bar.py  test_scanner.py  test_scanner_excluded_dirs.py  test_sorter.py  test_stages.py  test_validator.py  test_worker.py
translations/: en.py  ru.py
utils/: __init__.py  services.py  size_utils.py
